--- a/master.css
+++ b/master.css
@@ -180,6 +180,12 @@ h3 {
     width: 85%;
     border-right: 0;
     border-bottom: 4px dashed #2E8BC0;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 10px;
+    padding-bottom: 10px;
   }
   .story-box {
     border-radius: 35px;
@@ -189,13 +195,6 @@ h3 {
     background-color: #2E8BC0;
     box-shadow: 10px 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
   }
-  .year-box {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    margin-bottom: 10px;
-  }
   .arrow {
     border-top: 15px solid transparent;
     border-bottom: 15px solid transparent;
@@ -203,6 +202,6 @@ h3 {
     border-right: 0;
   }
   .arrow-container {
-    margin: 0 20px 10px 20px;
+    margin: 0 20px;
   }
 }
